<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_color"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="192dp"
        android:layout_height="85dp"
        android:fontFamily="@font/akaya_telivigala"
        android:onClick="openActivity"
        android:rotationX="12"
        android:text="@string/get_started"
        android:textColor="#F4673A"
        android:textSize="21sp"
        android:textStyle="bold"
        app:backgroundTint="#133154"
        app:iconTint="#FFEB3B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.615"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:id="@+id/editTextTextPersonName"
        android:layout_width="167dp"
        android:layout_height="151dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/akaya_telivigala"
        android:inputType="textPersonName"
        android:rotation="-28"
        android:rotationX="4"
        android:shadowColor="#D7D0D0"
        android:text="@string/tic"
        android:textColor="#FBE30B"
        android:textSize="84sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.291"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="178dp"
        android:layout_height="157dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/akaya_telivigala"
        android:inputType="textPersonName"
        android:text="@string/tac"
        android:textColor="#FFEB3B"
        android:textSize="84sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.427"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="128dp"
        android:layout_height="146dp"
        android:ems="10"
        android:fontFamily="@font/akaya_telivigala"
        android:inputType="textPersonName"
        android:rotation="16"
        android:text="@string/toe"
        android:textColor="#FFEB3B"
        android:textSize="84sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.613"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.333" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="99dp"
        android:layout_height="78dp"
        android:fontFamily="sans-serif-light"
        android:rotation="-24"
        android:rotationX="24"
        android:rotationY="32"
        android:text="@string/x1"
        android:textColor="#E91E63"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        app:layout_constraintVertical_bias="0.681" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="93dp"
        android:layout_height="51dp"
        android:fontFamily="sans-serif-black"
        android:rotation="32"
        android:rotationY="-8"
        android:text="@string/o2"
        android:textColor="#08F6E0"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.235"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.213" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="87dp"
        android:layout_height="51dp"
        android:fontFamily="sans-serif-thin"
        android:rotation="20"
        android:rotationX="16"
        android:rotationY="-20"
        android:text="X"
        android:textColor="#E91E63"
        android:textSize="52sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.604"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.31" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="90dp"
        android:layout_height="55dp"
        android:fontFamily="sans-serif-black"
        android:rotation="-28"
        android:rotationX="32"
        android:rotationY="-8"
        android:text="@string/o1"
        android:textColor="#009688"
        android:textSize="52sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.295"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="73dp"
        android:layout_height="77dp"
        android:fontFamily="sans-serif-black"
        android:rotation="24"
        android:rotationX="20"
        android:rotationY="-12"
        android:text="O"
        android:textColor="#61E9DD"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3"
        app:layout_constraintVertical_bias="0.868" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="69dp"
        android:layout_height="59dp"
        android:rotation="-12"
        android:rotationX="-4"
        android:rotationY="36"
        android:text="X"
        android:textColor="#F60B5B"
        android:textSize="64sp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3"
        app:layout_constraintVertical_bias="0.744" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="106dp"
        android:layout_height="71dp"
        android:fontFamily="sans-serif-black"
        android:rotation="-20"
        android:rotationX="28"
        android:text="O"
        android:textColor="#0CF4DF"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.943"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="108dp"
        android:layout_height="65dp"
        android:fontFamily="sans-serif-black"
        android:rotation="-24"
        android:rotationX="16"
        android:rotationY="24"
        android:text="X"
        android:textColor="#8A415A"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName2"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.417"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="99dp"
        android:layout_height="78dp"
        android:fontFamily="sans-serif-light"
        android:rotation="-24"
        android:rotationX="24"
        android:rotationY="32"
        android:text="X"
        android:textColor="#E91E63"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        app:layout_constraintVertical_bias="0.681" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="91dp"
        android:layout_height="65dp"
        android:fontFamily="sans-serif-medium"
        android:rotation="-20"
        android:rotationX="12"
        android:rotationY="8"
        android:text="@string/o"
        android:textColor="#4EA9A0"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName3"
        app:layout_constraintHorizontal_bias="0.358"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="97dp"
        android:layout_height="74dp"
        android:fontFamily="sans-serif-black"
        android:rotation="-12"
        android:rotationX="12"
        android:text="@string/x"
        android:textColor="#D27192"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.593"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>

